# sistop

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
docs/: first.md  schedule.md  test.c
src/: main.c
src/Scheduler/: escalonador.c  synt1.txt  synt2.txt  synt3.txt
src/disk/: disk.c  disk.h
src/interface/: interface.c  interface.h  kernel_ui.c  memory_ui.c  menu_ui.c
src/kernel/: kernel.c  kernel.h
src/memory/: memory.c  memory.h
src/process/: process.c  process.h
src/scheduler/: scheduler.c  scheduler.h
src/semaph/: semaph.c  semaph.h
src/terminal/: terminal.c  terminal.h
src/utils/: list.c  list.h  utils.c  utils.h
synt/: synt1  synt10  synt2  synt3  synt4  synt5  synt7  synt8  synt9
